@@ -1,3 +1,8 @@
+2003-05-06  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/jsutils.py: added simple module for marshalling
+	literal Python data into Javascript.
+
 2003-05-06    <drew@loki.sai-office>
 
 	* docs/opman/opman.tex: added Frank's MailServices update and made
